# CMakeGo

./: .gitignore  CMakeLists.txt  README
src/: cmake.cpp  cmake.h  logger.cpp  logger.h  main.cpp  minimal_windows.h
